# trusttunnel-win-gui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: README.md  configuration.md  getting-started.md  security.md  troubleshooting.md
manifest/: app.manifest  app.rc  resource.h
src/: app.rs  bootstrap.rs  config.rs  engine.rs  engine_state.rs  import.rs  killswitch.rs  main.rs  pidfile.rs  probe.rs  secret.rs  shred.rs  toml_writer.rs  watchdog.rs
src/geoip/: cidr.rs  mod.rs  ripe.rs
src/ui/: dialog.rs  mod.rs  tray.rs  window.rs
src/win/: acl.rs  mod.rs  proc.rs  wfp.rs
